간단한 test를 위한 mocha cdn 사용

--- a/js/index.html
+++ b/js/index.html
@@ -5,8 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="ex.js" type="module"></script>
+    <link rel="stylesheet" href="https://unpkg.com/mocha/mocha.css" />
+
+    <!-- <script src="ex.js" type="module"></script> -->
   </head>
-  <body></body>
+  <body>
+    <div id="mocha"></div>
+
+    <script src="https://unpkg.com/chai/chai.js"></script>
+    <script src="https://unpkg.com/mocha/mocha.js"></script>
+
+    <script class="mocha-init">
+      mocha.setup("bdd");
+      mocha.checkLeaks();
+    </script>
+    <script src="test.js"></script>
+
+    <script class="mocha-exec">
+      mocha.run();
+    </script>
+  </body>
 </html>
-1
