리팩터링의 기준으로 테스트코드 바라보기

--- a/js/index.html
+++ b/js/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://unpkg.com/mocha/mocha.css" />
 
     <!-- <script src="ex.js" type="module"></script> -->
+    <script src="test.js" type="module"></script>
   </head>
   <body>
     <div id="mocha"></div>
@@ -19,7 +20,7 @@
       mocha.setup("bdd");
       mocha.checkLeaks();
     </script>
-    <script src="test.js"></script>
+    <!-- <script src="test.js"></script> -->
 
     <script class="mocha-exec">
       mocha.run();
