변수 추출하기

--- a/js/index.html
+++ b/js/index.html
@@ -9,7 +9,7 @@
 
     <!-- <script src="ex.js" type="module"></script> -->
     <script src="test.js" type="module"></script>
-    <script src="techniques01.js" type="module"></script>
+    <!-- <script src="techniques01.js" type="module"></script> -->
   </head>
   <body>
     <div id="mocha"></div>
